More layout updates and content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,34 +2,40 @@
   <nav aria-label="Site map">
     <ul>
       <li>
-        <a href="{{ site.baseurl}}/how-to/">
-          How to test
+        <a href="{{ site.baseurl}}/shop/">
+          Shop phones by brand
         </a>
+        <ul>
+          <li>
+            <a href="{{ site.baseurl}}/shop/apple">
+              Apple
+            </a>
+          </li>
+        </ul>
       </li>
       <li>
-        <a href="{{ site.baseurl}}/web/">
-          Web checklist
+        <a href="{{ site.baseurl}}/shop/">
+          My account
         </a>
+        <ul>
+          <li>
+            <a href="{{ site.baseurl}}/shop/apple">
+              Apple
+            </a>
+          </li>
+        </ul>
       </li>
       <li>
-        <a href="{{ site.baseurl}}/native/">
-          Native checklist
+        <a href="{{ site.baseurl}}/shop/">
+          About T-Mobile
         </a>
-      </li>
-      <li>
-        <a href="{{ site.baseurl}}/demos/">
-          Demos
-        </a>
-      </li>
-      <li>
-        <a href="{{ site.baseurl}}/about/">
-          About
-        </a>
-      </li>
-      <li>
-        <a href="{{ site.baseurl}}/code-of-conduct/">
-          Code of conduct
-        </a>
+        <ul>
+          <li>
+            <a href="{{ site.baseurl}}/shop/apple">
+              Apple
+            </a>
+          </li>
+        </ul>
       </li>
     </ul>
   </nav>
