--- a/_includes/modules/hero.html
+++ b/_includes/modules/hero.html
@@ -7,7 +7,7 @@
         </a>
       </h2>
       <p><strong>How does the deal work: </strong> We pay up to $1000 via 30 monthly bill credits when you’re on a Magenta® MAX plan and trade in an eligible device.</p>
-      <a class="button">
+      <a href="#" class="button">
         Shop all iPhones
       </a>
     </div>
