--- a/_sass/base/_utilities.scss
+++ b/_sass/base/_utilities.scss
@@ -79,7 +79,7 @@
 
 .focused {
   outline: .25rem solid rgba($color-focus, 1);
-  outline-offset: 0rem;
+  outline-offset: .125rem;
   transition: .2s;
 
   &:hover {
