--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,3 +12,10 @@ layout: default
 </div>
 
 {% include modules/hero.html %}
+
+<div class="container group-2">
+{% include modules/tile-alpha.html %}
+{% include modules/tile-bravo.html %}
+{% include modules/tile-charlie.html %}
+{% include modules/tile-delta.html %}
+</div>
