--- a/_sass/modules/_layout.scss
+++ b/_sass/modules/_layout.scss
@@ -57,7 +57,8 @@ main {
   display: grid;
   @include break($break-mid) {
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 2rem;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
   }
 }
 
