--- a/_sass/modules/_nav.scss
+++ b/_sass/modules/_nav.scss
@@ -1,16 +1,147 @@
+// good use case for named grids
+
 nav {
   display: grid;
   position: relative;
+  
   &.site-menu {
-    border-bottom: 1px solid $color-border-gray;
+    border-bottom: 2px solid $color-brand-primary;
     padding-bottom: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+    grid-template-columns: 4rem auto max-content max-content 4rem;
+    grid-template-areas: 
+      "logo search search sign-in site-menu-toggle";
+
+    @include break($break-mid) {
+      grid-template-columns: 4rem auto max-content 4rem;
+      grid-template-areas: 
+        "logo search sign-in site-menu-toggle"
+        "primary primary primary primary";
+    }
+    
+    @include break($break-large) {
+      grid-template-columns: 4rem auto max-content max-content;
+      grid-template-areas: 
+        "logo audience audience sign-in"
+        "primary primary  secondary search";
+    }
+
     @include break($break-max) {
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 4rem auto auto max-content;
+      grid-template-areas: 
+        "logo audience audience sign-in"
+        "primary primary secondary search";
     }
   }
+  
+  a.illustrated {
+      position: relative;
+      padding-right: 3rem;
 
+      span {
+        @include break($break-large, $break-max) {
+          @include hidden;
+        }
+      }
 
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 1rem;
+        left: auto;
+        right: 0rem;
+        width: 2rem;
+        height: 2rem;
+        border: 1px solid $color-brand-primary;
+      }
+      
+      @include break($break-max) {
+        span {
+          position: relative;
+          height: auto;
+          width: auto;
+          max-height: 100vh;
+          overflow: auto;
+          clip: auto      ; /* IE6, IE7 */
+          white-space: normal; /* added line */
+        }
+      }
+    }
+
+  .home {
+    background: $color-brand-primary;
+    display: inline-block;
+    color: #fff;
+    width: 4rem;
+    height: 4rem;
+    grid-area: logo;
+  }
+
+  .site-menu-toggle {
+    padding: 1.5rem 1rem 1.5rem 1rem;
+    grid-area: site-menu-toggle;
+    @include break($break-large) {
+      display: none;
+    };
+  }
+
+  .search-container {
+    grid-area: search;
+    display: grid;
+    justify-items: end;
+    @include break($break-large) {
+      border-top: 2px solid $color-brand-primary;
+      padding-top: 1rem;
+    }
+
+    a.illustrated span {
+      @include hidden;
+      @include break($break-small) {
+        position: relative;
+      }
+    }
+  }
+  .sign-in-container {
+    grid-area: sign-in;
+    display: grid;
+    justify-items: end;
+  }
+  .audience {
+    display: none;
+    grid-area: audience;
+    @include break($break-large) {
+      display: flex;
+    };
+  }
+  
+  .primary {
+    display: none;
+    grid-area: primary;
+    @include break($break-mid) {
+      display: flex;
+    }
+    font-weight: bold;
+    @include break($break-large) {
+    border-top: 2px solid $color-brand-primary;
+      padding-top: 1rem;
+      justify-content: left;
+    }
+    a {
+      font-size: 1.25rem;
+    }
+  }
+  .secondary {
+    border-top: 2px solid $color-brand-primary;
+    display: none;
+    grid-area: secondary;
+
+    @include break($break-large) {
+      display: flex;
+      padding-top: 1rem;
+      justify-content: right;
+    }
+  }
 
   ul {
     display: flex;
@@ -68,150 +199,7 @@ nav {
     }
   }
 
-  .home {
-    background: $color-brand-primary;
-    color: #fff;
-  }
 
-  .expander-group {
-    box-shadow: none !important;
-    padding: 0 !important;
-    button.expander-toggle {
-      font-family: $sans, sans-serif;
-      font-size: 1rem;
-      line-height: 1rem;
-      background: transparent;
-      &:before {
-        display: none;
-      }
-      @include break(321px) {
-        padding-right: 3.25rem;
-        &:before {
-          display: block;
-        }
-      }
-    }
-    ul.expander-content {
-      position: absolute;
-      width: 100%;
-      left: 0;
-      top: 4.25rem;
-      margin: 0;
-      padding: 0 !important;
-      border: none;
-      box-shadow: 0 1px 2px 1px rgba(#000,.2), 0 30px 18px -18px rgba(#000,0);
-
-      li {
-        display: block;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        border-top: 1px solid $color-border-gray;
-        a {
-          text-align: left;
-          padding: 1.5rem;
-          display: block;
-          margin: 0;
-          &:after {
-            display: none;
-          }
-          &:hover,
-          &:focus {
-            &:after {
-              content: '';
-              display: block;
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: .5rem !important;
-              height: 100%;
-              background: $color-focus;
-            }
-          }
-        }
-        button.subnav {
-          margin: 0 ;
-          width: 4rem ;
-          padding: 1rem ;
-          top: 0 ;
-          line-height: 1rem;
-          right: 0 ;
-          border: 1px solid $color-border-gray;
-          border-right: none;
-          max-height: 4.125rem;
-          border-radius: 0;
-          &:after {
-            display: none;
-          }
-        }
-        ul.expander-content {
-          position: relative;
-          z-index: 99;
-          top: 0;
-          li {
-            display: flex !important;
-            z-index: 99;
-          }
-        }
-      }
-    }
-  }
-
-  .audience {
-    grid-row: 1;
-
-  }
-  .primary {
-    font-weight: bold;
-    @include break($break-large) {
-      border-top: 1px solid $color-border-gray;
-      padding-top: 1rem;
-      justify-content: left;
-      grid-row: 2;
-    }
-    a {
-      font-size: 1.25rem;
-    }
-  }
-  .secondary {
-    border-top: 1px solid $color-border-gray;
-    @include break($break-large) {
-      padding-top: 1rem;
-      justify-content: right;
-      grid-row: 2;
-    }
-  }
-
-  a.illustrated {
-    position: relative;
-    padding-right: 3rem;
-
-    span {
-      @include hidden;
-    }
-
-    &:after {
-      content: '';
-      display: block;
-      position: absolute;
-      top: 1rem;
-      left: auto;
-      right: 0rem;
-      width: 2rem;
-      height: 2rem;
-      border: 1px solid $color-brand-primary;
-    }
-    
-    @include break($break-max) {
-      span {
-        position: relative;
-        height: auto;
-        width: auto;
-        max-height: 100vh;
-        overflow: auto;
-        clip: auto      ; /* IE6, IE7 */
-        white-space: normal; /* added line */
-      }
-    }
-  }
+  
 }
+
