Refinements to nav grid!!!

--- a/_includes/examples/input-search.html
+++ b/_includes/examples/input-search.html
@@ -2,7 +2,7 @@
   <label for="search">
     Search this website:
   </label>
-  <input type="search" id="search">
+  <input type="search" id="search" placeholder="Search">
   <button type="submit">
     <span class="hidden">Search</span>
   </button>
