--- a/_sass/modules/_input-search.scss
+++ b/_sass/modules/_input-search.scss
@@ -4,17 +4,11 @@ form[role="search"] {
   display: flex;
   max-width: auto;
 
-  padding: 1rem 1rem;
+  padding: 1rem 0rem 1rem 0rem;
   transition: .7s;
-  border-radius: .125rem;
-  box-shadow: 0 1px 2px 1px rgba(#000,.1);
-  background: #f5f5f5;
 
   &:focus-within,
   &:hover {
-    background: #fff;
-    box-shadow: 0 1px 4px 1px rgba(#000,.3);
-
   }
 
   input[type="search"] {
