Tons of updates

--- a/_includes/examples/carousel.html
+++ b/_includes/examples/carousel.html
@@ -1,6 +1,6 @@
 <div class="carousel">
   <h2 class="h-bravo" id="carousel-title">
-    NATO alphabet slideshow
+    Photo gallery
   </h2>
 
   <div class="carousel-nav">
