--- a/_includes/modules/hero.html
+++ b/_includes/modules/hero.html
@@ -1,26 +1,28 @@
-<div class="container">
-  <div class="hero group-2-3 ">
-    <div class="">
-      <h2 class="h-alpha">
-        <a href="#">
-          Get the iPhone 13 on us
+<div class="hero-wrapper">
+  <div class="container">
+    <div class="hero group-2-3 ">
+      <div class="">
+        <h2 class="h-alpha">
+          <a href="#">
+            Get the iPhone 13 on us
+          </a>
+        </h2>
+        <p><strong>How does the deal work: </strong> We pay up to $1000 via 30 monthly bill credits when you’re on a Magenta® MAX plan and trade in an eligible device.</p>
+        <a href="#" class="button">
+          Shop all iPhones
         </a>
-      </h2>
-      <p><strong>How does the deal work: </strong> We pay up to $1000 via 30 monthly bill credits when you’re on a Magenta® MAX plan and trade in an eligible device.</p>
-      <a href="#" class="button">
-        Shop all iPhones
-      </a>
+      </div>
+
+      <div>
+        iphone 13 image goes here
+      </div>
     </div>
 
-    <div>
-      iphone 13 image goes here
+    <div class="legal">
+      <p>If you cancel before 30 credits, credits stop & balance on required finance agreement may be due. For well-qualified customers; plus tax. 
+        <a aria-label="See full terms for Get the iPhone 13 on us" href="#">See full terms</a>
+        </p>
     </div>
-  </div>
 
-  <div class="legal">
-    <p>If you cancel before 30 credits, credits stop & balance on required finance agreement may be due; contact us. For well-qualified customers; plus tax. 
-      <a aria-label="See full terms for Get the iPhone 13 on us" href="#">See full terms</a>
-      </p>
   </div>
-
 </div>
