--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
       <a
         {% if page.url== "/native/" %} aria-current="page" {% endif %}
         {% if page.url contains "native" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/business/">Prepaid
+        href="{{ site.baseurl }}/prepaid/">Prepaid
       </a>
     </li>
     <li>
@@ -49,7 +49,7 @@
       <a
         {% if page.url== "/native/" %} aria-current="page" {% endif %}
         {% if page.url contains "native" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/home-internet/">Internet
+        href="{{ site.baseurl }}/internet/">Internet
       </a>
     </li>        
   </ul>
@@ -59,28 +59,28 @@
       <a
         {% if page.url== "/web/" %} aria-current="page" {% endif %}
         {% if page.url contains "web" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/wireless/">Plans
+        href="{{ site.baseurl }}/plans/">Plans
       </a>
     </li>
     <li>
       <a
         {% if page.url== "/native/" %} aria-current="page" {% endif %}
         {% if page.url contains "native" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/business/">Phones &amp; Devices
+        href="{{ site.baseurl }}/shop/">Phones &amp; Devices
       </a>
     </li>
     <li>
       <a
         {% if page.url== "/native/" %} aria-current="page" {% endif %}
         {% if page.url contains "native" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/business/">Deals
+        href="{{ site.baseurl }}/deals/">Deals
       </a>
     </li>
     <li>
       <a
         {% if page.url== "/native/" %} aria-current="page" {% endif %}
         {% if page.url contains "native" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/tv/">Coverage
+        href="{{ site.baseurl }}/coverage/">Coverage
       </a>
     </li>
   </ul>
@@ -90,7 +90,7 @@
       <a class="illustrated find-a-store"
         {% if page.url== "/web/" %} aria-current="page" {% endif %}
         {% if page.url contains "web" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/wireless/">
+        href="{{ site.baseurl }}/stores/">
         <span>Find a store</span>
       </a>
     </li>
@@ -98,7 +98,7 @@
       <a class="illustrated contact"
         {% if page.url== "/native/" %} aria-current="page" {% endif %}
         {% if page.url contains "native" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/business/">
+        href="{{ site.baseurl }}/contact/">
         <span>Contact</span>
       </a>
     </li>
@@ -106,7 +106,7 @@
       <a class="illustrated cart"
         {% if page.url== "/native/" %} aria-current="page" {% endif %}
         {% if page.url contains "native" %} class="current" {% endif %}
-        href="{{ site.baseurl }}/business/">
+        href="{{ site.baseurl }}/cart/">
         <span>Cart</span>
       </a>
     </li>
