--- a/_sass/base/_colors.scss
+++ b/_sass/base/_colors.scss
@@ -19,6 +19,10 @@ $color-gold: #ffcc33;
 $color-green: #76D671;
 $color-green-dark: #078A14;
 
+$color-red: red;
+$color-red-text: darken(red, 10);
+
+
 $color-alert: $color-gold;
 
 
