--- a/_sass/modules/_all.scss
+++ b/_sass/modules/_all.scss
@@ -4,13 +4,16 @@
 @import "typography";
 
 @import "layout";
+@import "product";
 @import "entry";
 @import "examples";
 @import "hero";
 @import "tile";
+@import "plans";
+
+
 
 @import "forms";
-
 
 @import "header";
 @import "nav";
