--- a/_includes/examples/stars.html
+++ b/_includes/examples/stars.html
@@ -1,9 +1,6 @@
-<p class="stars">
+<span class="stars">
   <span class="scale">
   </span>
   <span class="rating">
   </span>
-  <span class="hidden">
-    Rating: 4 out of 5 stars
-  </span>
-</p>
+</span>
