--- a/_sass/modules/_alert.scss
+++ b/_sass/modules/_alert.scss
@@ -1,4 +1,5 @@
-[role="alert"] {
+[role="alert"],
+.alert {
   background: $color-alert;
   padding: 1rem;
   border-radius: 2px;
@@ -11,5 +12,9 @@
 
   &.visible {
     display: block;
+  }
+
+  * {
+    margin-bottom: 0;
   }
 }
