--- a/_sass/modules/_cards.scss
+++ b/_sass/modules/_cards.scss
@@ -9,67 +9,79 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  .card {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    background: #fff;
-    box-shadow: 0 1px 4px 1px rgba(#000,.1);
-    border-radius: 2px;
-    list-style-type: none;
+  
+}
 
+.card {
+  margin: 0 0 2rem 0;
+  padding: 1rem;
+  list-style-type: none;
+  background: #fff;
+  box-shadow: 0 1px 2px 1px rgba(#000, .05);
+  border-radius: 2px;
+  list-style-type: none;
 
-    &.interactive {
-      cursor: pointer;
-      position: relative;
-      &:after {
-        content: '';
-        display: block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 0;
-        background: transparent;
-        width: 100%;
-        height: 100%;
-
-      }
-      &:hover {
-        box-shadow: 0 0 0 .25rem rgba($color-focus, .5);
-        outline-offset: 0rem;
-        transition: .2s;
-      }
-    }
-
-    .extended-description {
-      padding: 0 1rem 1rem 1rem;
-      z-index: 99;
-      position: relative;
-    }
-
-    a.display {
+  &.interactive {
+    cursor: pointer;
+    position: relative;
+    &:after {
+      content: '';
       display: block;
-      margin: 0px auto;
-      padding: 2rem 1rem;
-      text-align: center;
-      font-size: clamp(2rem, 3vw, 3rem);
-      font-weight: bold;
-      text-decoration: none;
-      border-radius: 0px;
-      border-bottom: .25rem solid $color-brand-primary;
-      @include headline;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      background: transparent;
+      width: 100%;
+      height: 100%;
 
-      svg {
-        display: block;
-        margin: 0px auto;
-      }
-
-      span {
-        display: block;
-        font-size: 1rem;
-        font-weight: normal;
-        @include regular;
-      }
+    }
+    &:hover {
+      box-shadow: 0 0 0 .25rem rgba($color-focus, .5);
+      outline-offset: 0rem;
+      transition: .2s;
     }
   }
+
+  .extended-description {
+    padding: 0 1rem 1rem 1rem;
+    z-index: 99;
+    position: relative;
+  }
+
+  a.display {
+    display: block;
+    margin: 0px auto;
+    padding: 2rem 1rem;
+    text-align: center;
+    font-size: clamp(2rem, 3vw, 3rem);
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 0px;
+    border-bottom: .25rem solid $color-brand-primary;
+    @include headline;
+
+    svg {
+      display: block;
+      margin: 0px auto;
+    }
+
+    span {
+      display: block;
+      font-size: 1rem;
+      font-weight: normal;
+      @include regular;
+    }
+  }
+
+  &.invalid {
+    border-top: 4px solid $color-gold;
+    box-shadow: 0 0 0 .5rem rgba($color-gold, .5);
+  }
+
+  details {
+    border: 1px solid $color-border-gray;
+    margin-bottom: 1rem;
+  }
+
 }
