--- a/_sass/modules/_carousel.scss
+++ b/_sass/modules/_carousel.scss
@@ -21,7 +21,7 @@
     padding: 0;
     padding: 1rem;
     background: #fff;
-    box-shadow: 0 0 4px 1px rgba(#000, .2);
+    box-shadow: 0 1px 2px 1px rgba(#000, .05);
   }
 
   .carousel-nav {
