--- a/_sass/modules/_details-summary.scss
+++ b/_sass/modules/_details-summary.scss
@@ -4,12 +4,12 @@ details {
   border: none;
   border-radius: 2px;
   margin-bottom: calc(2rem + 2px);
-  box-shadow: 0 0 5px 1px rgba(#000, .1);
+  box-shadow: 0 1px 2px 1px rgba(#000, .05);
 
   summary {
     font-weight: bold;
     @include headline;
-    padding: 1.5rem 2rem 1.5rem 1rem !important;
+    padding: 1.5rem 1rem 1.5rem 5rem !important;
     margin: calc(-1rem);
     line-height: .875;
     font-size: 1.25rem;
@@ -30,7 +30,7 @@ details {
       display: block;
       position: absolute;
       top: 1rem;
-      right: 1rem;
+      left: 1rem;
       width: 2rem;
       height: 2rem;
       border-radius: 2rem;
@@ -43,6 +43,16 @@ details {
       transform: rotate(0deg);
       box-shadow: 0 0 0rem .1rem transparent;
       transition: box-shadow .2s;
+    }
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0rem;
+      bottom: 0;
+      left: 1rem;
+      width: 3rem;
+      border-right: 1px solid darken($color-gray-xtra-light, 5);
     }
     &:hover,
     &:focus {
@@ -66,7 +76,7 @@ details {
 
   &[open] summary {
     padding-bottom: 1rem;
-    border-bottom: 1px dotted $color-border-gray;
+    border-bottom: 1px solid $color-border-gray;
     margin-bottom: 1rem;
     @include ripple;
     &:before {
