--- a/_layouts/plans.html
+++ b/_layouts/plans.html
@@ -12,7 +12,7 @@
     <div class="card">
       <div class="select-container">
         <label class="h-bravo" for="nato">
-          Select your number of lines
+          Number of lines
         </label>
         <select id="nato">
           <option label="1 line" selected>1</option>
@@ -21,13 +21,10 @@
           <option label="4 lines">4 lines</option>
         </select>
       </div>
-
     </div>
-
   </div>
-  
-  <div class="container plans">
-    
+ 
+  <div class="container plans">   
     <div class="plan card essentials">
       <div class="plan-header">
         <h2 class="h-bravo">
