--- a/_sass/modules/_cards.scss
+++ b/_sass/modules/_cards.scss
@@ -21,6 +21,11 @@
   border-radius: 2px;
   list-style-type: none;
 
+  @include break($break-large) {
+    padding: 2rem;
+
+  }
+
   &.interactive {
     cursor: pointer;
     position: relative;
